--- a/ZSPhotoScroller/Resources/Storyboard.storyboard
+++ b/ZSPhotoScroller/Resources/Storyboard.storyboard
@@ -7,7 +7,7 @@
         <!--Page Control For Your-->
         <scene sceneID="fLe-bR-rvp">
             <objects>
-                <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="max" id="A4p-0E-1JF" customClass="ZSPSPageControlForYour" sceneMemberID="viewController"/>
+                <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" pageSpacing="20" navigationOrientation="horizontal" spineLocation="max" id="A4p-0E-1JF" customClass="ZSPSPageControlForYour" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VLJ-GF-3so" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="197" y="-17"/>
